--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     font-family: 'Lato', sans-serif;;
     font-size: 18px;
     line-height: 1.2;
-    background-color: #fbfbfb;
+    background-color: #ffeadb;
     color: #0f0f0f;
  }
  h1{
@@ -38,6 +38,11 @@ h2{
 }
 p{
     margin: 16px, o;
+    text-align: justify;
+    line-height: 170%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-bottom: 1%;
 }
 img{
     max-width: 100%;
@@ -86,7 +91,7 @@ header{
     padding: 16px;
     height: 90px;
     width: 100%;
-    background-color: #fbfbfb;
+    background-color: #679b9b;
     position: fixed;
     top: 0;
     left: 0;
@@ -126,7 +131,7 @@ text-align: center;
 }
 
 a.btn {
-    background-color: #af599e;
+    background-color: #ff9a76;
     color: #fbfbfb;
     padding: 12px 20px;
     border-radius: 50px;
@@ -138,41 +143,50 @@ a.btn {
 section.contacto{
     justify-content: space-around;
     min-height: 50vh;
+    
 }
 
 article.contacto{
     width: 100%;
     text-align: center;
-    background: rgba(175, 89, 158, 0.3);
+    background: #679b9b;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 #contactame{
     width: 90%;
     display: flex;
+    justify-content: center;
     flex-direction: row;
     margin-top: 20%;
    }
 
     figure.email{
         width: 900%;
-        max-width: 200px;
-        max-height: 400px;
+        max-width: 150px;
+        max-height: 300px;
         margin-right: 10px;
+        justify-content: center;
     }
 
     figure.github{
         width: 900%;
-        max-width: 200px;
-        max-height: 400px; 
-        margin-right: 10px;  
-               
+        max-width: 150px;
+        max-height: 300px; 
+        margin-right: 10px; 
+        justify-content: center; 
+            
     }
 
     figure.linkedin{
         width: 900%;
-        max-width: 200px;
-        max-height: 400px;
+        max-width: 150px;
+        max-height: 300px;
         margin-right: 10px;
+        justify-content: center;
             
     }
 
@@ -182,8 +196,8 @@ article.contacto{
         align-items: center;
         width: 100%;
         height: 90px;
-        background: #af599e;
-        color: #fbfbfb;
+        background: #679b9b;
+        color: #black;
     }
 
     #logo{
@@ -191,3 +205,26 @@ article.contacto{
     width: 100%;
     }
 
+@media (min-width:1024px) {
+
+    h1{
+        font-size: 48px;
+        text-align: left;
+    }
+    h2{
+        font-size: 32px;
+    }
+
+    section#inicio {
+        flex-direction: row;
+    }
+    article.presentacion-texto {
+        width: 50%;
+        text-align: left;
+    }
+
+    li.menu-item:hover {
+        background-color: #ff9a76;
+        transition: #637373;
+    }
+    
