--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,8 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
-    height: 90px;
+    padding: 8px;
+    height: 12vh;
     width: 100%;
     background-color: #679b9b;
     position: fixed;
